link in stylesheet and script to document

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<canvas width="300" height="300"></canvas>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="chaser.css">
+  </head>
+  <body>
+    <canvas width="300" height="300"></canvas>
+    <script src="chaser.js"></script>
+  </body>
+</html>
