--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="chaser.css">
   </head>
   <body>
+    <h1>coinscape</h1>
     <canvas width="300" height="300"></canvas>
     <script src="chaser.js"></script>
   </body>
