--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>coinscape</h1>
+    <progress value="70" max="100"></progress>
     <canvas width="300" height="300"></canvas>
     <script src="chaser.js"></script>
   </body>
