--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <progress value="70" max="100"></progress>
     <canvas width="300" height="300"></canvas>
     <script src="chaser.js"></script>
-    <button onclick="drawScene()">Click me</button>
+    <button>Click me</button>
   </body>
 </html>
