--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>coinscape</h1>
     <progress value="100" max="100"></progress>
+    <p>Score:<span id='score'></span></p>
     <canvas width="600" height="600"></canvas>
     <script src="chaser.js"></script>
     <button>Click me</button>
