--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="chaser.css">
   </head>
   <body>
-    <h1>coinscape</h1>
-    <progress value="100" max="100"></progress>
-    <p>Score:<span id='score'></span></p>
+    <h1>Game </h1>
+    <p>
+        <progress max="100" value="100"></progress> 
+    </p>
+      <p id ="scoreKeeper" >Score:<span id='score'></span></p>
     <canvas width="600" height="600"></canvas>
     <script src="chaser.js"></script>
     <button>Click me</button>
