adds html and css decorations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <progress max="100" value="100"></progress> 
     </p>
     <p id ="scoreKeeper" >Score:<span id='score'></span></p>
-    <canvas width="600" height="600"></canvas>
+    <div id="canvas">
+        <canvas width="600" height="600"></canvas>
+    </div>
       
     <script src="chaser.js"></script>
     <button>Click me</button>
