add id to button

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <body>
     <h1>Game </h1>
     <p>
-        <progress max="100" value="100"></progress> 
+        <progress max="100" value="100"></progress>
     </p>
     <p id ="scoreKeeper" >Score:<span id='score'></span></p>
     <div id="canvas">
         <canvas width="600" height="600"></canvas>
     </div>
-      
+
     <script src="chaser.js"></script>
-    <button>Click me</button>
+    <button id = "button">Restart Game</button>
   </body>
 </html>
