--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="chaser.css">
   </head>
   <body>
-    <h1>Game </h1>
+    <h1>Miku vs. Virus!</h1>
     <p>
         <progress max="100" value="100"></progress>
     </p>
