adds game over screen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </p>
     <p id ="scoreKeeper" >Score:<span id='score'></span></p>
     <div id="canvas">
+         <img id="gameOver" src="http://res.cloudinary.com/misclg/image/upload/v1512802346/GameOver.png" >
         <canvas width="600" height="600"></canvas>
     </div>
     <button id = "button">Restart Game</button>
